--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -11,8 +11,9 @@
     <div class="sidepanel">
       <h1>MIP Control Panel</h1>
       <h2>Instructions</h2>
-      <p>Fill out instructions</p>
-      
+      <p>Press Connect to establish a connection with the MiP.</p>
+      <p>S-w and S-s will move the MiP forward and backward</p>
+      <p>S-a and S-d will turn the MiP left and right</p>
       <button id="connect" onclick="connect()">Connect</button>
       <button id="forwardButton" onclick="forwardMove(1)">W</button>
       <button id="leftTurnButton" onclick="leftTurn(1)">A</button>
@@ -21,7 +22,16 @@
     </div>
     <div class="infopane">
       <span>Connection:</span>
-      <span id="status">Disconnected</span>
-    </div>
-  </body>
+      <span id="connection">disconnected</span>
+      <div id="history">
+	
+      </div>
+      <span>
+	<input id="command" type="text">
+	<button onclick="sendCommand()">
+	  Enter
+	</button>
+      </span>
+       </div>
+      </body>
 </html>
